--- a/frontend/login.css
+++ b/frontend/login.css
@@ -12,13 +12,18 @@ input[type=text], input[type=password] {
 
 /* Set a style for all buttons */
 button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
+    color: #fff;
+    font-weight: 400;
     border: none;
     cursor: pointer;
-    width: 100%;
+    display: inline-block;
+    width: auto;
+    height: 32px;
+    margin: 20px 15px auto;
+    padding: 0 20px;
+    background-color: transparent;
+    border: 1px solid #fff;
+    border-radius: 2px;
 }
 
 button:hover {
@@ -40,7 +45,7 @@ button:hover {
 }
 
 img.avatar {
-    width: 40%;
+    width: 20%;
     border-radius: 50%;
 }
 
@@ -117,4 +122,24 @@ span.psw {
     .cancelbtn {
         width: 100%;
     }
+}
+
+.header {
+    background-color: #283e4a;
+    padding: 0 12px;
+}
+
+.wrapper {
+    display: flex;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    width: auto;
+    height: 70px;
+    margin: 0 auto;
+}
+
+.logo {
+    height: 30px;
+    width: auto;
+    transition: opacity 0.3s;
 }
