--- a/frontend/login.css
+++ b/frontend/login.css
@@ -33,6 +33,7 @@ button:hover {
 .cancelbtn {
     width: auto;
     padding: 10px 18px;
+    margin: auto;
     background-color: #f44336;
 }
 
@@ -75,7 +76,7 @@ img.avatar {
     margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
     border-radius: 5px;
     border: 1px solid #888;
-    width: 45%; /* Could be more or less, depending on screen size */
+    width: 40%; /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button (x) */
@@ -236,6 +237,7 @@ label:first-of-type {
 
 .loginbtn {
     float: right;
+    margin: auto;
     width: auto;
     padding: 10px 18px;
     background-color: #0073b1;
