--- a/frontend/main.css
+++ b/frontend/main.css
@@ -129,3 +129,64 @@ body {font-family: Arial, Helvetica, sans-serif;}
 .current {
     opacity: 1;
 }
+
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
+
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+}
+
+.tab button {
+    background-color: inherit;
+    float: left;
+    border: inherit;
+    color: black;
+    outline: none;
+    cursor: pointer;
+    padding: 10px auto;
+    margin: 0 auto;
+    transition: 0.3s;
+    font-size: 17px;
+}
+
+.tab button:hover {
+    background-color: #ddd;
+}
+
+.tab button.active {
+    background-color: #ccc;
+}
+
+button {
+    color: #fff;
+    font-weight: 400;
+    cursor: pointer;
+    display: inline-block;
+    width: auto;
+    height: 32px;
+    margin: 20px 15px auto;
+    padding: 0 20px;
+    background-color: transparent;
+    border: 1px solid #fff;
+    border-radius: 2px;
+}
+
+.main-pane {
+    width: 700px;
+    min-height: inherit;
+    padding: 0 0 24px;
+    margin: 0 auto;
+    border-radius: 2px;
+    background: #EDF0F3;
+    overflow: auto;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: left;
+}
