Ajout du search container dans recherche

--- a/frontend/main.css
+++ b/frontend/main.css
@@ -191,3 +191,35 @@ button {
     flex-flow: column wrap;
     justify-content: left;
 }
+
+.submit-search {
+    background-color: #0073b1;
+    border: 0;
+    width: auto;
+    height: 38px;
+    border-radius: 2px;
+    cursor: pointer;
+    overflow: hidden;
+    position: relative;
+    margin: auto;
+    z-index: 0;
+    color: rgba(255,255,255,0.85);
+}
+
+.submit-search:hover {
+    opacity: 0.8;
+}
+
+.search-form {
+    display: flex;
+    flex-flow: row;
+}
+
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
