--- a/frontend/main.css
+++ b/frontend/main.css
@@ -257,6 +257,7 @@ input[type=text], input[type=password] {
     padding: 10px 5px;
     border: 2px solid #888;
     border-radius: 5px;
+    text-align: center;
 }
 
 .right-pane {
