--- a/frontend/main.css
+++ b/frontend/main.css
@@ -309,3 +309,19 @@ input[type=text], input[type=password] {
     border: 2px solid #888;
     border-radius: 5px;
 }
+
+.post-content {
+    padding: 5px 5px;
+    border: 2px solid #888;
+    border-radius: 5px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+.profile-post {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    float: right;
+    width: 170px;
+    height: auto;
+}
