--- a/frontend/main.css
+++ b/frontend/main.css
@@ -304,24 +304,37 @@ input[type=text], input[type=password] {
     color: #fff;
     background-color: #355668;
     min-height: inherit;
-    margin: 15px 15px;
+    margin: 15px 20px 15px 0px;
     padding: 5px 12px;
     border: 2px solid #888;
     border-radius: 5px;
 }
 
 .post-content {
+    text-align: justify;
+    text-justify: inter-word;
+    overflow: auto;
     padding: 5px 5px;
-    border: 2px solid #888;
-    border-radius: 5px;
-    margin-right: 10px;
-    margin-bottom: 10px;
+    border-top: 2px solid #888;
 }
 
 .profile-post {
-    margin-top: 10px;
-    margin-bottom: 10px;
     float: right;
-    width: 170px;
-    height: auto;
+    max-height: 170px;
+    max-width: auto;
+}
+
+.post {
+    background-color: #e2e2e2;
+    overflow: scroll;
+    border: 2px solid #888;
+    border-radius: 5px;
+    margin-right: 20px;
+    margin-bottom: 10px;
+}
+
+
+
+.page-title {
+    text-align: center;
 }
