Compilable, no error - Mais ne change rien

--- a/frontend/login.css
+++ b/frontend/login.css
@@ -41,7 +41,7 @@ button:hover {
     background-color: #f44336;
 }
 
-.loginbtn {
+.postbtn {
     float: right;
     margin: auto;
     width: auto;
