--- a/frontend/main.css
+++ b/frontend/main.css
@@ -187,7 +187,7 @@ button {
 .main-pane {
     width: 700px;
     min-height: inherit;
-    padding: 0 0 24px;
+    padding: 5px 0 24px;
     margin: 0 auto;
     border-radius: 2px;
     background: #EDF0F3;
@@ -221,14 +221,7 @@ button {
     flex-flow: row;
 }
 
-input[type=text], input[type=password] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-}
+
 
 .job-pane {
     background-color: transparent;
@@ -371,4 +364,92 @@ input[type=text], input[type=password] {
     left: 2px;
     float: left;
     color: #aaa;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    padding-top: 60px;
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    border-radius: 5px;
+    border: 1px solid #888;
+    width: 40%; /* Could be more or less, depending on screen size */
+}
+
+/* Add Zoom Animation */
+.animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
+}
+
+/* Center the image and position the close button */
+.imgcontainer {
+    text-align: center;
+    margin: 24px 0 12px 0;
+    position: relative;
+}
+
+.container {
+    margin: auto;
+    padding: 10px;
+}
+
+label {
+    margin: 10px 0 5px;
+}
+
+input[type=text] {
+    width: 100%;
+    height: 100%;
+    padding: 12px 20px;
+    margin: 0px auto;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    margin: auto;
+    background-color: #f44336;
+}
+
+.loginbtn {
+    float: right;
+    margin: auto;
+    width: auto;
+    padding: 10px 18px;
+    background-color: #0073b1;
+}
+
+/* The Close Button (x) */
+.close {
+    position: absolute;
+    right: 25px;
+    top: 0;
+    color: #000;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: red;
+    cursor: pointer;
 }
