--- a/frontend/main.css
+++ b/frontend/main.css
@@ -318,6 +318,13 @@ button {
     border-top: 2px solid #888;
 }
 
+.postbtn {
+    margin: auto;
+    width: auto;
+    padding: 10px 18px;
+    background-color: #0073b1;
+}
+
 .profile-post {
     float: right;
     max-height: 170px;
@@ -366,6 +373,15 @@ button {
     color: #aaa;
 }
 
+.time-right {
+    font-size: small;
+    position: relative;
+    bottom: 0px;
+    right: 2px;
+    float: right;
+    color: #aaa;
+}
+
 /* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
@@ -405,6 +421,9 @@ button {
 
 .container {
     margin: auto;
+    margin-top: 5px;
+    padding-top: 10px;
+    border-top: 2px solid #888;
     padding: 10px;
 }
 
@@ -420,6 +439,13 @@ input[type=text] {
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
+}
+
+.comment-content {
+    text-align: justify;
+    text-justify: inter-word;
+    overflow: auto;
+    padding: 5px 5px;
 }
 
 /* Extra styles for the cancel button */
